# easy_dataset_pro

./: .gitignore  LICENSE  README.md  batch_query.py  pyproject.toml  requirements.txt  run.py
docs/: tutorial.md
documents/: ║╙▒▒╩í░▓╚½╔·▓·╖τ╧╒╣▄┐╪╙δ╥■╗╝╓╬└φ╣µ╢¿║╙▒▒╩í╚╦├±╒■╕«┴εí▓2018í│╡┌ 2 ║┼.docx  ╓╨╗¬╚╦├±╣▓║═╣·╧√╖└╖¿.docx  ╔·▓·░▓╚½╩┬╣╩╙ª╝▒╘ñ░╕╣▄└φ░∞╖¿.docx  ╗·╣╪íó═┼╠σíó╞≤╥╡íó╩┬╥╡╡Ñ╬╗╧√╖└░▓╚½╣▄└φ╣µ╢¿ú¿╣½░▓▓┐61║┼┴εú⌐.docx  ╗»╣ñ║═╬ú╧╒╗»╤º╞╖╔·▓·╛¡╙¬╡Ñ╬╗╓╪┤≤╔·▓·░▓╚½╩┬╣╩╥■╗╝┼╨╢¿▒Ω╫╝.docx  ╗»╣ñ╞≤╥╡╔·▓·╣²│╠╥∞│ú╣ñ┐÷░▓╚½┤ª╓├╫╝╘≥.wps  ╝╙╟┐╗»╣ñ╞≤╥╡╨╣┬⌐╣▄└φ╡─╓╕╡╝╥Γ╝√░▓╝α╫▄╣▄╚²í▓2014í│94║┼.docx  ╣·╝╥░▓╚½╝α╣▄╫▄╛╓╣╪╙┌╝╙╟┐╗»╣ñ╣²│╠░▓╚½╣▄└φ╡─╓╕╡╝╥Γ╝√░▓╝α╫▄╣▄╚²í▓2013í│88║┼.docx  ╧√╖└░▓╚½╘≡╚╬╓╞╩╡╩⌐░∞╖¿╣·░∞╖óí▓2017í│87║┼.docx  ╬ú╧╒╗»╤º╞╖╓╪┤≤╬ú╧╒╘┤╝α╢╜╣▄└φ╘▌╨╨╣µ╢¿╡┌40║┼.docx  ╬ú╧╒╗»╤º╞╖▓╓┐Γ┤ó┤µ═¿╘≥GB 15603-2022(OCR).docx
graphrag/config/: config.yaml  config.yaml.example
graphrag/src/: logging_setup.py  main.py
graphrag/src/chunking/: __init__.py  semantic_chunker.py
graphrag/src/config/: __init__.py  settings.py
graphrag/src/embeddings/: __init__.py  embedder.py
graphrag/src/generation/: generator.py
graphrag/src/graph/: builder.py  retriever.py
graphrag/src/preprocessing/: __init__.py  convert_to_md.py  dataset_generator.py  llm_compress.py  pipeline.py  quality_pipeline.py
graphrag/src/rerank/: __init__.py  base.py  cross_encoder.py  factory.py  openai_reranker.py
graphrag/src/similarity/: __init__.py  base.py  cosine.py  dot_product.py  factory.py
tests/: test_chunker.py  test_config.py  test_graph.py  test_rerank.py  test_similarity.py
