[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-dataset-pro"
version = "0.1.0"
description = "基于知识图谱的 LLM 微调数据集生成与问答系统 | Graph-based Dataset Generation & QA System for LLM Fine-tuning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Easy Dataset Pro Contributors"},
]
keywords = ["dataset-generation", "llm-fine-tuning", "knowledge-graph", "rag", "graphrag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.5.0",
    "neo4j>=5.14.0",
    "orjson>=3.8.0",
]

[project.optional-dependencies]
preprocessing = [
    "docling>=2.0.0",
    "pypdf>=5.0.0",
    "onnxruntime>=1.26.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
graphrag = "run:main"

[tool.setuptools.packages.find]
include = ["graphrag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
